# curl-bash-explain

./: .env.example  .gitignore  README.md  curlbash.service  manage.py  pyproject.toml
analyzer/: models.py  services.py  views.py
analyzer/migrations/: 0001_initial.py
analyzer/templates/analyzer/: base.html  index.html  results.html
curlbash_project/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
